--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -82,5 +82,46 @@ body {
 }
 
 .min-width-0 {
-    min-width: 0; /* Essential for text-truncate to work inside a flexbox */
+    min-width: 0;
+}
+
+.page-link {
+    transition: background-color 0.2s ease, border-color 0.2s ease;
+}
+
+.pagination .page-link:focus {
+    box-shadow: none !important;
+    outline: none;
+}
+
+.pagination .page-link:hover {
+    background-color: #f8f9fa;
+}
+
+.page-link:focus {
+    box-shadow: none;
+    outline: none;
+}
+
+
+.page-link:focus-visible {
+    box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+}
+
+.custom-card-img {
+    height: 100%;
+    object-fit: fill;
+    width: 100%;
+}
+
+.smaller-text {
+    font-size: 0.75rem;
+}
+
+.card {
+    transition: transform 0.2s;
+}
+
+.card:hover {
+    transform: translateY(-5px);
 }
